[gd_scene load_steps=2 format=3 uid="uid://dxg3grccnj5os"]

[ext_resource type="Script" path="res://scripts/sign_in_menu.gd" id="1_kda3h"]

[node name="SignInMenu" type="PanelContainer"]
custom_minimum_size = Vector2(500, 0)
script = ExtResource("1_kda3h")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Sign In"
horizontal_alignment = 1

[node name="UsernameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Username"

[node name="UsernameBox" type="LineEdit" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "enter your username"

[node name="APIKeyLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "API Key"

[node name="APIKeyBox" type="LineEdit" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "enter your API key"
secret = true

[node name="SaveLogin" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer/SaveLogin"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/SaveLogin"]
layout_mode = 2
text = "save login"

[node name="SubmitButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Submit"

[node name="LoginStatus" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="MarginContainer/VBoxContainer/SubmitButton" to="." method="_on_submit_button_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_request_completed"]
